--- a/cmd/tikv-ctl/Cargo.toml
+++ b/cmd/tikv-ctl/Cargo.toml
@@ -49,7 +49,7 @@ backup = { path = "../../components/backup", default-features = false }
 cdc = { path = "../../components/cdc", default-features = false }
 chrono = "0.4"
 clap = "2.32"
-collections = { path = "../../components/collections" }
+collections = { path = "../../components/collections", default-features = false }
 concurrency_manager = { path = "../../components/concurrency_manager", default-features = false }
 crossbeam = "0.8"
 encryption_export = { path = "../../components/encryption/export", default-features = false }
@@ -65,7 +65,7 @@ keys = { path = "../../components/keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
-log_wrappers = { path = "../../components/log_wrappers" }
+log_wrappers = { path = "../../components/log_wrappers", default-features = false }
 pd_client = { path = "../../components/pd_client", default-features = false }
 prometheus = { version = "0.13", features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
@@ -77,13 +77,13 @@ rand = "0.8"
 regex = "1"
 security = { path = "../../components/security", default-features = false }
 serde_json = "1.0"
-server = { path = "../../components/server" }
+server = { path = "../../components/server", default-features = false }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 structopt = "0.3"
 tempfile = "3.0"
 tikv = { path = "../../", default-features = false }
-tikv_alloc = { path = "../../components/tikv_alloc" }
+tikv_alloc = { path = "../../components/tikv_alloc", default-features = false }
 tikv_util = { path = "../../components/tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
 toml = "0.5"
