--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -23,20 +23,20 @@ async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
 async-trait = { version = "0.1" }
 bytes = "1"
 chrono = "0.4"
-concurrency_manager = { path = "../concurrency_manager" }
+concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crossbeam = "0.8"
 crossbeam-channel = "0.5"
 dashmap = "5"
 engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
-error_code = { path = "../error_code" }
+error_code = { path = "../error_code", default-features = false }
 # We cannot update the etcd-client to latest version because of the cyclic requirement.
 # Also we need wait until https://github.com/etcdv3/etcd-client/pull/43/files to be merged.
 etcd-client = { git = "https://github.com/pingcap/etcd-client", rev = "e0321a1990ee561cf042973666c0db61c8d82364", features = ["pub-response-field", "tls"] }
 external_storage = { path = "../external_storage", default-features = false }
 external_storage_export = { path = "../external_storage/export", default-features = false }
 fail = "0.5"
-file_system = { path = "../file_system" }
+file_system = { path = "../file_system", default-features = false }
 futures = "0.3"
 futures-io = "0.3"
 
@@ -44,24 +44,24 @@ grpcio = { version = "0.10", default-features = false, features = ["openssl-vend
 hex = "0.4"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.4"
-log_wrappers = { path = "../log_wrappers" }
-online_config = { path = "../online_config" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
+online_config = { path = "../online_config", default-features = false }
 openssl = "0.10"
-pd_client = { path = "../pd_client" }
+pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raftstore = { path = "../raftstore", default-features = false }
 regex = "1"
-resolved_ts = { path = "../resolved_ts" }
+resolved_ts = { path = "../resolved_ts", default-features = false }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 thiserror = "1"
 tidb_query_datatype = { path = "../tidb_query_datatype", default-features = false }
 tikv = { path = "../../", default-features = false }
-tikv_alloc = { path = "../tikv_alloc" }
-tikv_kv = { path = "../tikv_kv" }
-tikv_util = { path = "../tikv_util" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
+tikv_kv = { path = "../tikv_kv", default-features = false }
+tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time", "sync"] }
 tokio-stream = "0.1"
 tokio-util = { version = "0.7", features = ["compat"] } 
@@ -72,7 +72,7 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [dev-dependencies]
 async-trait = "0.1"
-engine_panic = { path = "../engine_panic" }
+engine_panic = { path = "../engine_panic", default-features = false }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 hex = "0.4"
 protobuf = { version = "2.8", features = ["bytes"] }
