--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -35,9 +35,9 @@ failpoints = ["tikv/failpoints"]
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
 async-channel = "1.4"
-aws = { path = "../cloud/aws" }
-causal_ts = { path = "../causal_ts" }
-collections = { path = "../collections" }
+aws = { path = "../cloud/aws", default-features = false }
+causal_ts = { path = "../causal_ts", default-features = false }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crc64fast = "0.1"
 encryption = { path = "../encryption", default-features = false }
@@ -54,8 +54,8 @@ hex = "0.4"
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
-log_wrappers = { path = "../log_wrappers" }
-online_config = { path = "../online_config" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
+online_config = { path = "../online_config", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
@@ -69,7 +69,7 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 thiserror = "1.0"
 tidb_query_common = { path = "../tidb_query_common", default-features = false }
 tikv = { path = "../../", default-features = false }
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
