--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -8,13 +8,13 @@ default = ["test-runner"]
 test-runner = ["derive_more"]
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 crossbeam = "0.8"
 derive_more = { version = "0.99", optional = true }
 fail = "0.5"
 file_system = { path = "../file_system", default-features = false }
 lazy_static = "1.3"
-online_config = { path = "../online_config" }
+online_config = { path = "../online_config", default-features = false }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
