--- a/components/codec/Cargo.toml
+++ b/components/codec/Cargo.toml
@@ -10,10 +10,10 @@ error_code = { path = "../error_code", default-features = false }
 libc = "0.2"
 static_assertions = { version = "1.0", features = ["nightly"] }
 thiserror = "1.0"
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 
 [dev-dependencies]
 bytes = "1.0"
-panic_hook = { path = "../panic_hook" }
+panic_hook = { path = "../panic_hook", default-features = false }
 protobuf = "2"
 rand = "0.8"
