--- a/components/concurrency_manager/Cargo.toml
+++ b/components/concurrency_manager/Cargo.toml
@@ -22,7 +22,7 @@ package = "crossbeam-skiplist"
 criterion = "0.3"
 futures = "0.3"
 rand = "0.8.3"
-tikv_alloc = { path = "../tikv_alloc", features = ["jemalloc"] }
+tikv_alloc = { path = "../tikv_alloc", default-features = false, features = ["jemalloc"] }
 
 [[bench]]
 name = "lock_table"
