--- a/components/encryption/Cargo.toml
+++ b/components/encryption/Cargo.toml
@@ -23,7 +23,7 @@ futures-util = { version = "0.3", default-features = false, features = ["std", "
 hex = "0.4.2"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
-online_config = { path = "../online_config" }
+online_config = { path = "../online_config", default-features = false }
 openssl = "0.10"
 prometheus = { version = "0.13", features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
@@ -34,7 +34,7 @@ slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debu
 # better to not use slog-global, but pass in the logger
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 thiserror = "1.0"
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["time", "rt"] }
 
