--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -24,7 +24,7 @@ nortcheck = []
 
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
-case_macros = { path = "../case_macros" }
+case_macros = { path = "../case_macros", default-features = false }
 collections = { path = "../collections", default-features = false }
 derive_more = "0.99.3"
 encryption = { path = "../encryption", default-features = false }
@@ -34,9 +34,9 @@ file_system = { path = "../file_system", default-features = false }
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.4.0"
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 num_cpus = "1"
-online_config = { path = "../online_config" }
+online_config = { path = "../online_config", default-features = false }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 protobuf = "2"
@@ -48,10 +48,10 @@ slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debu
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog_derive = "0.2"
 tempfile = "3.0"
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
-tracker = { path = "../tracker" }
+tracker = { path = "../tracker", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 
 [dependencies.rocksdb]
