--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -9,7 +9,7 @@ failpoints = ["fail/failpoints"]
 
 [dependencies]
 engine_rocks = { path = "../engine_rocks", default-features = false }
-engine_traits = { path = "../engine_traits" }
+engine_traits = { path = "../engine_traits", default-features = false }
 fail = "0.5"
 futures = "0.3"
 keys = { path = "../keys", default-features = false }
@@ -23,6 +23,6 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 tikv_util = { path = "../tikv_util", default-features = false }
 
 [dev-dependencies]
-engine_test = { path = "../engine_test" }
+engine_test = { path = "../engine_test", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 tempfile = "3.0"
