--- a/components/external_storage/export/Cargo.toml
+++ b/components/external_storage/export/Cargo.toml
@@ -51,7 +51,7 @@ cloud-storage-grpc = [
 [dependencies]
 aws = { optional = true, path = "../../cloud/aws", default-features = false }
 azure = { optional = true, path = "../../cloud/azure", default-features = false }
-cloud = { path = "../../cloud", default_features = false }
+cloud = { path = "../../cloud", default-features = false }
 lazy_static = { optional = true, version = "1.3" }
 gcp = { optional = true, path = "../../cloud/gcp", default-features = false }
 grpcio = { version = "0.10", optional = true, default-features = false, features = ["openssl-vendored"] }
@@ -59,7 +59,7 @@ encryption = { path = "../../encryption", default-features = false }
 external_storage = { path = "../", default-features = false }
 engine_traits = { path = "../../engine_traits", default-features = false }
 ffi-support = { optional = true, version = "0.4.2" }
-file_system = { optional = true, path = "../../file_system" }
+file_system = { optional = true, path = "../../file_system", default-features = false }
 futures = { optional = true, version = "0.3" }
 futures-executor = { optional = true, version = "0.3" }
 futures-io = { version = "0.3" }
@@ -69,7 +69,7 @@ libloading = { optional = true, version = "0.7.0" }
 once_cell = { optional = true, version = "1.3.1" }
 protobuf = { optional = true, version = "2" }
 slog-global = { optional = true, version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
-tikv_util = { path = "../../tikv_util" }
+tikv_util = { path = "../../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["time", "rt", "net"], optional = true }
 tokio-util = { version = "0.7", features = ["compat"], optional = true }
 url = "2.0"
