--- a/components/file_system/Cargo.toml
+++ b/components/file_system/Cargo.toml
@@ -8,13 +8,13 @@ publish = false
 bcc-iosnoop = ["bcc"]
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 crc32fast = "1.2"
 crossbeam-utils = "0.8.0"
 fs2 = "0.4"
 lazy_static = "1.3"
 libc = "0.2"
-online_config = { path = "../online_config" }
+online_config = { path = "../online_config", default-features = false }
 openssl = "0.10"
 parking_lot = "0.12"
 prometheus = { version = "0.13", features = ["nightly"] }
@@ -24,7 +24,7 @@ serde = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 strum = { version = "0.20", features = ["derive"] }
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["time"] }
 
