--- a/components/pd_client/Cargo.toml
+++ b/components/pd_client/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 failpoints = ["fail/failpoints"]
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
 futures = "0.3"
@@ -16,7 +16,7 @@ grpcio = { version = "0.10", default-features = false, features = ["openssl-vend
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 prometheus = { version = "0.13", features = ["nightly"] }
 security = { path = "../security", default-features = false }
 semver = "0.10"
@@ -25,7 +25,7 @@ serde_derive = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 thiserror = "1.0"
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1", features = ["sync"] }
 tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
