--- a/components/raft_log_engine/Cargo.toml
+++ b/components/raft_log_engine/Cargo.toml
@@ -5,13 +5,13 @@ publish = false
 edition = "2018"
 
 [dependencies]
-encryption = { path = "../encryption" }
+encryption = { path = "../encryption", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
-file_system = { path = "../file_system" }
+file_system = { path = "../file_system", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.4.0"
 num_cpus = "1"
-online_config = { path = "../online_config" }
+online_config = { path = "../online_config", default-features = false }
 protobuf = "2"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-engine = { git = "https://github.com/tikv/raft-engine.git", features = ["swap"] }
@@ -21,4 +21,4 @@ slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debu
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
-tracker = { path = "../tracker" }
+tracker = { path = "../tracker", default-features = false }
