--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -30,34 +30,34 @@ cloud-azure = ["raftstore/cloud-azure"]
 
 [dependencies]
 batch-system = { path = "../batch-system", default-features = false }
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 crossbeam = "0.8"
-engine_traits = { path = "../engine_traits" }
-error_code = { path = "../error_code" }
+engine_traits = { path = "../engine_traits", default-features = false }
+error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
-file_system = { path = "../file_system" }
+file_system = { path = "../file_system", default-features = false }
 futures = { version = "0.3", features = ["compat"] }
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-log_wrappers = { path = "../log_wrappers" }
-pd_client = { path = "../pd_client" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
+pd_client = { path = "../pd_client", default-features = false }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0" }
-raftstore = { path = "../raftstore" }
+raftstore = { path = "../raftstore", default-features = false }
 slog = "2.3"
 smallvec = "1.4"
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
-tracker = { path = "../tracker" }
+tracker = { path = "../tracker", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 
 [dev-dependencies]
 engine_test = { path = "../engine_test", default-features = false }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tempfile = "3.0"
-test_pd = { path = "../test_pd" }
-test_util = { path = "../test_util" }
+test_pd = { path = "../test_pd", default-features = false }
+test_util = { path = "../test_util", default-features = false }
 
 [[test]]
 name = "raftstore-v2-failpoints"
