--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -32,8 +32,8 @@ batch-system = { path = "../batch-system", default-features = false }
 bitflags = "1.0.1"
 byteorder = "1.2"
 bytes = "1.0"
-causal_ts = { path = "../causal_ts" }
-collections = { path = "../collections" }
+causal_ts = { path = "../causal_ts", default-features = false }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crc32fast = "1.2"
 crossbeam = "0.8"
@@ -59,9 +59,9 @@ keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
-log_wrappers = { path = "../log_wrappers" }
-memory_trace_macros = { path = "../memory_trace_macros" }
-online_config = { path = "../online_config" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
+memory_trace_macros = { path = "../memory_trace_macros", default-features = false }
+online_config = { path = "../online_config", default-features = false }
 openssl = "0.10"
 ordered-float = "2.6"
 parking_lot = "0.12"
@@ -72,7 +72,7 @@ protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0", default-features = false }
 rand = "0.8.3"
-resource_metering = { path = "../resource_metering" }
+resource_metering = { path = "../resource_metering", default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
 serde_with = "1.4"
@@ -83,11 +83,11 @@ sst_importer = { path = "../sst_importer", default-features = false }
 tempfile = "3.0"
 thiserror = "1.0"
 tidb_query_datatype = { path = "../tidb_query_datatype", default-features = false }
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
 tokio = { version = "1.5", features = ["sync", "rt-multi-thread"] }
-tracker = { path = "../tracker" }
+tracker = { path = "../tracker", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
@@ -96,5 +96,5 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 encryption_export = { path = "../encryption/export", default-features = false }
 engine_panic = { path = "../engine_panic", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
-panic_hook = { path = "../panic_hook" }
+panic_hook = { path = "../panic_hook", default-features = false }
 test_sst_importer = { path = "../test_sst_importer", default-features = false }
