--- a/components/resolved_ts/Cargo.toml
+++ b/components/resolved_ts/Cargo.toml
@@ -23,7 +23,7 @@ test-engines-rocksdb = ["tikv/test-engines-rocksdb"]
 test-engines-panic = ["tikv/test-engines-panic"]
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crossbeam = "0.8"
 engine_traits = { path = "../engine_traits", default-features = false }
@@ -33,8 +33,8 @@ grpcio = { version = "0.10", default-features = false, features = ["openssl-vend
 hex = "0.4"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
-log_wrappers = { path = "../log_wrappers" }
-online_config = { path = "../online_config" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
+online_config = { path = "../online_config", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
@@ -51,13 +51,13 @@ txn_types = { path = "../txn_types", default-features = false }
 
 [dev-dependencies]
 engine_rocks = { path = "../engine_rocks", default-features = false }
-panic_hook = { path = "../panic_hook" }
+panic_hook = { path = "../panic_hook", default-features = false }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 tempfile = "3.0"
 test_raftstore = { path = "../test_raftstore", default-features = false }
-test_sst_importer = { path = "../test_sst_importer" }
+test_sst_importer = { path = "../test_sst_importer", default-features = false }
 test_util = { path = "../test_util", default-features = false }
-tikv_kv = { path = "../tikv_kv" }
+tikv_kv = { path = "../tikv_kv", default-features = false }
 
 [[test]]
 name = "integrations"
