--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -33,20 +33,20 @@ nortcheck = ["engine_rocks/nortcheck"]
 backup-stream-debug = ["backup-stream/backup-stream-debug"]
 
 [dependencies]
-api_version = { path = "../api_version" }
+api_version = { path = "../api_version", default-features = false }
 backup = { path = "../backup", default-features = false }
 backup-stream = { path = "../backup-stream", default-features = false }
-causal_ts = { path = "../causal_ts" }
+causal_ts = { path = "../causal_ts", default-features = false }
 cdc = { path = "../cdc", default-features = false }
 chrono = "0.4"
 clap = "2.32"
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crossbeam = "0.8"
 encryption = { path = "../encryption", default-features = false }
 encryption_export = { path = "../encryption/export", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
-engine_rocks_helper = { path = "../engine_rocks_helper" }
+engine_rocks_helper = { path = "../engine_rocks_helper", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
 file_system = { path = "../file_system", default-features = false }
@@ -59,7 +59,7 @@ keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 prometheus = { version = "0.13", features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
@@ -68,7 +68,7 @@ raft_log_engine = { path = "../raft_log_engine", default-features = false }
 raftstore = { path = "../raftstore", default-features = false, features = ["engine_rocks"] }
 rand = "0.8"
 resolved_ts = { path = "../../components/resolved_ts", default-features = false }
-resource_metering = { path = "../resource_metering" }
+resource_metering = { path = "../resource_metering", default-features = false }
 security = { path = "../security", default-features = false, features = ["tonic"] }
 serde_json = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
@@ -76,7 +76,7 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 snap_recovery = { path = "../snap_recovery", default-features = false }
 tempfile = "3.0"
 tikv = { path = "../..", default-features = false }
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 toml = "0.5"
