--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -11,12 +11,12 @@ cloud-gcp = ["external_storage_export/cloud-gcp"]
 cloud-azure = ["external_storage_export/cloud-azure"]
 
 [dependencies]
-api_version = { path = "../api_version" }
-backup = { path = "../backup" }
-collections = { path = "../collections" }
-concurrency_manager = { path = "../concurrency_manager" }
+api_version = { path = "../api_version", default-features = false }
+backup = { path = "../backup", default-features = false }
+collections = { path = "../collections", default-features = false }
+concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crc64fast = "0.1"
-engine_traits = { path = "../engine_traits" }
+engine_traits = { path = "../engine_traits", default-features = false }
 external_storage_export = { path = "../external_storage/export", default-features = false }
 file_system = { path = "../file_system", default-features = false }
 futures = "0.3"
@@ -27,8 +27,8 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 protobuf = "2"
 rand = "0.8"
 tempfile = "3.0"
-test_raftstore = { path = "../test_raftstore" }
-tidb_query_common = { path = "../tidb_query_common" }
+test_raftstore = { path = "../test_raftstore", default-features = false }
+tidb_query_common = { path = "../tidb_query_common", default-features = false }
 tikv = { path = "../../", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
