--- a/components/test_coprocessor/Cargo.toml
+++ b/components/test_coprocessor/Cargo.toml
@@ -20,14 +20,14 @@ test-engines-panic = [
 ]
 
 [dependencies]
-api_version = { path = "../api_version" }
-collections = { path = "../collections" }
+api_version = { path = "../api_version", default-features = false }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
 futures = "0.3"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 protobuf = "2"
-resource_metering = { path = "../resource_metering" }
+resource_metering = { path = "../resource_metering", default-features = false }
 test_storage = { path = "../test_storage", default-features = false }
 tidb_query_common = { path = "../tidb_query_common", default-features = false }
 tidb_query_datatype = { path = "../tidb_query_datatype", default-features = false }
