--- a/components/test_pd/Cargo.toml
+++ b/components/test_pd/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 fail = "0.5"
 futures = "0.3"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
