--- a/components/test_pd_client/Cargo.toml
+++ b/components/test_pd_client/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2018"
 publish = false
 
 [dependencies]
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 fail = "0.5"
 futures = "0.3"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
