--- a/components/test_raftstore/Cargo.toml
+++ b/components/test_raftstore/Cargo.toml
@@ -23,40 +23,40 @@ test-engines-panic = [
 ]
 
 [dependencies]
-api_version = { path = "../api_version" }
+api_version = { path = "../api_version", default-features = false }
 backtrace = "0.3"
-causal_ts = { path = "../causal_ts", features = ["testexport"] }
-collections = { path = "../collections" }
+causal_ts = { path = "../causal_ts", default-features = false, features = ["testexport"] }
+collections = { path = "../collections", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 crossbeam = "0.8"
 encryption_export = { path = "../encryption/export", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
-engine_rocks_helper = { path = "../engine_rocks_helper" }
+engine_rocks_helper = { path = "../engine_rocks_helper", default-features = false }
 engine_test = { path = "../engine_test", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 fail = "0.5"
-file_system = { path = "../file_system" }
+file_system = { path = "../file_system", default-features = false }
 futures = "0.3"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raftstore = { path = "../raftstore", default-features = false, features = ["testexport"] }
 rand = "0.8"
-resolved_ts = { path = "../resolved_ts" }
-resource_metering = { path = "../resource_metering" }
+resolved_ts = { path = "../resolved_ts", default-features = false }
+resource_metering = { path = "../resource_metering", default-features = false }
 security = { path = "../security", default-features = false }
-server = { path = "../server" }
+server = { path = "../server", default-features = false }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 # better to not use slog-global, but pass in the logger
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tempfile = "3.0"
-test_pd_client = { path = "../test_pd_client" }
+test_pd_client = { path = "../test_pd_client", default-features = false }
 test_util = { path = "../test_util", default-features = false }
 tikv = { path = "../../", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
