--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -21,8 +21,8 @@ test-engines-panic = [
 ]
 
 [dependencies]
-api_version = { path = "../api_version" }
-collections = { path = "../collections" }
+api_version = { path = "../api_version", default-features = false }
+collections = { path = "../collections", default-features = false }
 futures = "0.3"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client", default-features = false }
