--- a/components/tidb_query_datatype/Cargo.toml
+++ b/components/tidb_query_datatype/Cargo.toml
@@ -14,13 +14,13 @@ bstr = "0.2.8"
 chrono = "0.4"
 chrono-tz = "0.5.1"
 codec = { path = "../codec", default-features = false }
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 encoding_rs = { git = "https://github.com/xiongjiwei/encoding_rs.git", rev = "68e0bc5a72a37a78228d80cd98047326559cf43c" }
 error_code = { path = "../error_code", default-features = false }
 hex = "0.4"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 match-template = "0.0.1"
 nom = { version = "5.1.0", default-features = false, features = ["std"] }
 num = { version = "0.3", default-features = false }
@@ -36,6 +36,6 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 static_assertions = { version = "1.0", features = ["nightly"] }
 thiserror = "1.0"
 tidb_query_common = { path = "../tidb_query_common", default-features = false }
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tipb = { git = "https://github.com/pingcap/tipb.git" }
