--- a/components/tidb_query_executors/Cargo.toml
+++ b/components/tidb_query_executors/Cargo.toml
@@ -8,12 +8,12 @@ description = "A vector query engine to run TiDB pushed down executors"
 [dependencies]
 async-trait = "0.1"
 codec = { path = "../codec", default-features = false }
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 fail = "0.5"
 futures = { version = "0.3", features = ["compat"] }
 itertools = "0.10"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 match-template = "0.0.1"
 protobuf = { version = "2.8", features = ["bytes"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
