--- a/components/tidb_query_expr/Cargo.toml
+++ b/components/tidb_query_expr/Cargo.toml
@@ -13,7 +13,7 @@ codec = { path = "../codec", default-features = false }
 file_system = { path = "../file_system", default-features = false }
 flate2 = { version = "=1.0.11", default-features = false, features = ["zlib"] }
 hex = "0.4"
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 match-template = "0.0.1"
 num = { version = "0.3", default-features = false }
 num-traits = "0.2"
@@ -25,7 +25,7 @@ safemem = { version = "0.3", default-features = false }
 serde = "1.0"
 serde_json = "1.0"
 static_assertions = { version = "1.0", features = ["nightly"] }
-tidb_query_codegen = { path = "../tidb_query_codegen" }
+tidb_query_codegen = { path = "../tidb_query_codegen", default-features = false }
 tidb_query_common = { path = "../tidb_query_common", default-features = false }
 tidb_query_datatype = { path = "../tidb_query_datatype", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
@@ -37,6 +37,6 @@ uuid = { version = "0.8.1", features = ["v4"] }
 [dev-dependencies]
 bstr = "0.2.8"
 chrono = "0.4"
-panic_hook = { path = "../panic_hook" }
-profiler = { path = "../profiler" }
+panic_hook = { path = "../panic_hook", default-features = false }
+profiler = { path = "../profiler", default-features = false }
 tipb_helper = { path = "../tipb_helper", default-features = false }
