--- a/components/tracker/Cargo.toml
+++ b/components/tracker/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-collections = { path = "../../components/collections" }
+collections = { path = "../../components/collections", default-features = false }
 crossbeam-utils = "0.8"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1"
