--- a/components/txn_types/Cargo.toml
+++ b/components/txn_types/Cargo.toml
@@ -8,16 +8,16 @@ publish = false
 bitflags = "1.0.1"
 byteorder = "1.2"
 codec = { path = "../codec", default-features = false }
-collections = { path = "../collections" }
+collections = { path = "../collections", default-features = false }
 error_code = { path = "../error_code", default-features = false }
 farmhash = "1.1.5"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-log_wrappers = { path = "../log_wrappers" }
+log_wrappers = { path = "../log_wrappers", default-features = false }
 slog = "2.3"
 thiserror = "1.0"
-tikv_alloc = { path = "../tikv_alloc" }
+tikv_alloc = { path = "../tikv_alloc", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 
 [dev-dependencies]
-panic_hook = { path = "../panic_hook" }
+panic_hook = { path = "../panic_hook", default-features = false }
 rand = "0.8"
