--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,32 +64,32 @@ name = "tikv"
 
 [dependencies]
 anyhow = "1.0"
-api_version = { path = "components/api_version", default-features = false }
+api_version = { workspace = true }
 async-stream = "0.2"
 async-trait = "0.1"
 backtrace = "0.3"
-batch-system = { path = "components/batch-system", default-features = false }
+batch-system = { workspace = true }
 byteorder = "1.2"
-case_macros = { path = "components/case_macros", default-features = false }
-causal_ts = { path = "components/causal_ts", default-features = false }
+case_macros = { workspace = true }
+causal_ts = { workspace = true }
 chrono = "0.4"
-codec = { path = "components/codec", default-features = false }
-collections = { path = "components/collections", default-features = false }
-concurrency_manager = { path = "components/concurrency_manager", default-features = false }
-coprocessor_plugin_api = { path = "components/coprocessor_plugin_api", default-features = false }
+codec = { workspace = true }
+collections = { workspace = true }
+concurrency_manager = { workspace = true }
+coprocessor_plugin_api = { workspace = true }
 crc32fast = "1.2"
 crc64fast = "0.1"
 crossbeam = "0.8"
 dashmap = "5"
-encryption_export = { path = "components/encryption/export", default-features = false }
-engine_panic = { path = "components/engine_panic", default-features = false }
-engine_rocks = { path = "components/engine_rocks", default-features = false }
-engine_test = { path = "components/engine_test", default-features = false }
-engine_traits = { path = "components/engine_traits", default-features = false }
-engine_traits_tests = { path = "components/engine_traits_tests", default-features = false }
-error_code = { path = "components/error_code", default-features = false }
+encryption_export = { workspace = true }
+engine_panic = { workspace = true }
+engine_rocks = { workspace = true }
+engine_test = { workspace = true }
+engine_traits = { workspace = true }
+engine_traits_tests = { workspace = true }
+error_code = { workspace = true }
 fail = "0.5"
-file_system = { path = "components/file_system", default-features = false }
+file_system = { workspace = true }
 flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
 futures = { version = "0.3", features = ["thread-pool", "compat"] }
 futures-executor = "0.3.1"
@@ -102,17 +102,17 @@ hex = "0.4"
 http = "0"
 hyper = { version = "0.14", features = ["full"] }
 hyper-tls = "0.5"
-into_other = { path = "components/into_other", default-features = false }
+into_other = { workspace = true }
 itertools = "0.10"
-keys = { path = "components/keys", default-features = false }
+keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 libc = "0.2"
 libloading = "0.7"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
-log_wrappers = { path = "components/log_wrappers", default-features = false }
+log_wrappers = { workspace = true }
 match-template = "0.0.1"
-memory_trace_macros = { path = "components/memory_trace_macros", default-features = false }
+memory_trace_macros = { workspace = true }
 mime = "0.3.13"
 more-asserts = "0.2"
 murmur3 = "0.5.1"
@@ -120,11 +120,11 @@ nom = { version = "5.1.0", default-features = false, features = ["std"] }
 notify = "4"
 num-traits = "0.2.14"
 num_cpus = "1"
-online_config = { path = "components/online_config", default-features = false }
+online_config = { workspace = true }
 openssl = "0.10"
 parking_lot = "0.12"
 paste = "1.0"
-pd_client = { path = "components/pd_client", default-features = false }
+pd_client = { workspace = true }
 pin-project = "1.0"
 pnet_datalink = "0.23"
 pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "3fed55af8fc6cf69dbd954a0321c799c5a111e4e", default-features = false, features = ["flamegraph", "protobuf-codec"] }
@@ -132,14 +132,14 @@ prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
-raft_log_engine = { path = "components/raft_log_engine", default-features = false }
-raftstore = { path = "components/raftstore", default-features = false, features = ["engine_rocks"] }
+raft_log_engine = { workspace = true }
+raftstore = { workspace = true, features = ["engine_rocks"] }
 rand = "0.7.3"
 regex = "1.3"
-resource_metering = { path = "components/resource_metering", default-features = false }
+resource_metering = { workspace = true }
 rev_lines = "0.2.1"
 seahash = "4.1.0"
-security = { path = "components/security", default-features = false }
+security = { workspace = true }
 semver = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
@@ -148,41 +148,41 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 smallvec = "1.4"
-sst_importer = { path = "components/sst_importer", default-features = false }
+sst_importer = { workspace = true }
 strum = { version = "0.20", features = ["derive"] }
 sync_wrapper = "0.1.1"
 sysinfo = "0.16"
 tempfile = "3.0"
 thiserror = "1.0"
-tidb_query_aggr = { path = "components/tidb_query_aggr", default-features = false }
-tidb_query_common = { path = "components/tidb_query_common", default-features = false }
-tidb_query_datatype = { path = "components/tidb_query_datatype", default-features = false }
-tidb_query_executors = { path = "components/tidb_query_executors", default-features = false }
-tidb_query_expr = { path = "components/tidb_query_expr", default-features = false }
-tikv_alloc = { path = "components/tikv_alloc", default-features = false }
-tikv_kv = { path = "components/tikv_kv", default-features = false }
-tikv_util = { path = "components/tikv_util", default-features = false }
+tidb_query_aggr = { workspace = true }
+tidb_query_common = { workspace = true }
+tidb_query_datatype = { workspace = true }
+tidb_query_executors = { workspace = true }
+tidb_query_expr = { workspace = true }
+tikv_alloc = { workspace = true }
+tikv_kv = { workspace = true }
+tikv_util = { workspace = true }
 time = "0.1"
 tipb = { git = "https://github.com/pingcap/tipb.git" }
 tokio = { version = "1.17", features = ["full"] }
 tokio-openssl = "0.6"
 tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
 toml = "0.5"
-tracker = { path = "components/tracker", default-features = false }
-txn_types = { path = "components/txn_types", default-features = false }
+tracker = { workspace = true }
+txn_types = { workspace = true }
 url = "2"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 walkdir = "2"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [dev-dependencies]
-api_version = { path = "components/api_version", default-features = false, features = ["testexport"] }
-example_plugin = { path = "components/test_coprocessor_plugin/example_plugin", default-features = false } # should be a binary dependency
+api_version = { workspace = true, features = ["testexport"] }
+example_plugin = { workspace = true } # should be a binary dependency
 hyper-openssl = "0.9"
-panic_hook = { path = "components/panic_hook", default-features = false }
+panic_hook = { workspace = true }
 reqwest = { version = "0.11", features = ["blocking"] }
-test_sst_importer = { path = "components/test_sst_importer", default-features = false }
-test_util = { path = "components/test_util", default-features = false }
+test_sst_importer = { workspace = true }
+test_util = { workspace = true }
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
 zipf = "6.1.0"
 
@@ -239,7 +239,6 @@ members = [
   "components/codec",
   "components/collections",
   "components/concurrency_manager",
-  "components/concurrency_manager",
   "components/coprocessor_plugin_api",
   "components/encryption",
   "components/encryption/export",
@@ -261,7 +260,6 @@ members = [
   "components/raftstore-v2",
   "components/resolved_ts",
   "components/resource_metering",
-  "components/server",
   "components/server",
   "components/snap_recovery",
   "components/sst_importer",
@@ -292,6 +290,76 @@ members = [
   "tests",
 ]
 default-members = ["cmd/tikv-server", "cmd/tikv-ctl"]
+
+[workspace.dependencies]
+api_version = { path = "components/api_version", default-features = false }
+backup = { path = "components/backup", default-features = false }
+backup-stream = { path = "components/backup-stream", default-features = false }
+batch-system = { path = "components/batch-system", default-features = false }
+case_macros = { path = "components/case_macros", default-features = false }
+causal_ts = { path = "components/causal_ts", default-features = false }
+cdc = { path = "components/cdc", default-features = false }
+cloud = { path = "components/cloud", default-features = false }
+aws = { path = "components/cloud/aws", default-features = false }
+azure = { path = "components/cloud/azure", default-features = false }
+gcp = { path = "components/cloud/gcp", default-features = false }
+codec = { path = "components/codec", default-features = false }
+collections = { path = "components/collections", default-features = false }
+concurrency_manager = { path = "components/concurrency_manager", default-features = false }
+coprocessor_plugin_api = { path = "components/coprocessor_plugin_api", default-features = false }
+encryption = { path = "components/encryption", default-features = false }
+encryption_export = { path = "components/encryption/export", default-features = false }
+engine_panic = { path = "components/engine_panic", default-features = false }
+engine_rocks = { path = "components/engine_rocks", default-features = false }
+engine_rocks_helper = { path = "components/engine_rocks_helper", default-features = false }
+engine_test = { path = "components/engine_test", default-features = false }
+engine_traits = { path = "components/engine_traits", default-features = false }
+engine_traits_tests = { path = "components/engine_traits_tests", default-features = false }
+error_code = { path = "components/error_code", default-features = false }
+external_storage = { path = "components/external_storage", default-features = false }
+external_storage_export = { path = "components/external_storage/export", default-features = false }
+file_system = { path = "components/file_system", default-features = false }
+into_other = { path = "components/into_other", default-features = false }
+keys = { path = "components/keys", default-features = false }
+log_wrappers = { path = "components/log_wrappers", default-features = false }
+memory_trace_macros = { path = "components/memory_trace_macros", default-features = false }
+online_config = { path = "components/online_config", default-features = false }
+panic_hook = { path = "components/panic_hook", default-features = false }
+pd_client = { path = "components/pd_client", default-features = false }
+raft_log_engine = { path = "components/raft_log_engine", default-features = false }
+raftstore = { path = "components/raftstore", default-features = false }
+raftstore_v2 = { path = "components/raftstore-v2", default-features = false }
+resolved_ts = { path = "components/resolved_ts", default-features = false }
+resource_metering = { path = "components/resource_metering", default-features = false }
+server = { path = "components/server", default-features = false }
+snap_recovery = { path = "components/snap_recovery", default-features = false }
+sst_importer = { path = "components/sst_importer", default-features = false }
+test_backup = { path = "components/test_backup", default-features = false }
+test_coprocessor = { path = "components/test_coprocessor", default-features = false }
+test_coprocessor_plugin = { path = "components/test_coprocessor_plugin/example_plugin", default-features = false }
+test_pd = { path = "components/test_pd", default-features = false }
+test_pd_client = { path = "components/test_pd_client", default-features = false }
+test_raftstore = { path = "components/test_raftstore", default-features = false }
+test_sst_importer = { path = "components/test_sst_importer", default-features = false }
+test_storage = { path = "components/test_storage", default-features = false }
+test_util = { path = "components/test_util", default-features = false }
+tidb_query_aggr = { path = "components/tidb_query_aggr", default-features = false }
+tidb_query_codegen = { path = "components/tidb_query_codegen", default-features = false }
+tidb_query_common = { path = "components/tidb_query_common", default-features = false }
+tidb_query_datatype = { path = "components/tidb_query_datatype", default-features = false }
+tidb_query_executors = { path = "components/tidb_query_executors", default-features = false }
+tidb_query_expr = { path = "components/tidb_query_expr", default-features = false }
+tikv_alloc = { path = "components/tikv_alloc", default-features = false }
+tikv_util = { path = "components/tikv_util", default-features = false }
+tipb_helper = { path = "components/tipb_helper", default-features = false }
+tracker = { path = "components/tracker", default-features = false }
+txn_types = { path = "components/txn_types", default-features = false }
+security = { path = "components/security", default-features = false }
+tikv_kv = { path = "components/tikv_kv", default-features = false }
+example_plugin = { path = "components/test_coprocessor_plugin/example_plugin", default-features = false }
+tikv = { path = ".", default-features = false }
+profiler = { path = "components/profiler", default-features = false }
+fuzz-targets = { path = "fuzz/targets", default-features = false }
 
 [profile.dev.package.grpcio-sys]
 debug = false
