--- a/components/collections/Cargo.toml
+++ b/components/collections/Cargo.toml
@@ -6,4 +6,4 @@ publish = false
 
 [dependencies]
 fxhash = "0.2.1"
-tikv_alloc = { path = "../tikv_alloc", default-features = false }
+tikv_alloc = { workspace = true }
