--- a/components/engine_tirocks/Cargo.toml
+++ b/components/engine_tirocks/Cargo.toml
@@ -4,24 +4,24 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-api_version = { path = "../api_version", default-features = false }
-codec = { path = "../codec", default-features = false }
-collections = { path = "../collections", default-features = false }
+api_version = { workspace = true }
+codec = { workspace = true }
+collections = { workspace = true }
 derive_more = "0.99.3"
-engine_traits = { path = "../engine_traits", default-features = false }
-keys = { path = "../keys", default-features = false }
+engine_traits = { workspace = true }
+keys = { workspace = true }
 lazy_static = "1.4.0"
-log_wrappers = { path = "../log_wrappers", default-features = false }
+log_wrappers = { workspace = true }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog_derive = "0.2"
-tikv_alloc = { path = "../tikv_alloc", default-features = false }
-tikv_util = { path = "../tikv_util", default-features = false }
+tikv_alloc = { workspace = true }
+tikv_util = { workspace = true }
 tirocks = { git = "https://github.com/busyjay/tirocks.git", branch = "dev" }
-tracker = { path = "../tracker", default-features = false }
-txn_types = { path = "../txn_types", default-features = false }
+tracker = { workspace = true }
+txn_types = { workspace = true }
 
 [dev-dependencies]
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
