--- a/components/error_code/Cargo.toml
+++ b/components/error_code/Cargo.toml
@@ -18,4 +18,4 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 serde = { version = "1.0", features = ["derive"] }
-tikv_alloc = { path = "../tikv_alloc", default-features = false }
+tikv_alloc = { workspace = true }
