--- a/components/keys/Cargo.toml
+++ b/components/keys/Cargo.toml
@@ -7,9 +7,9 @@ publish = false
 [dependencies]
 byteorder = "1.2"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-log_wrappers = { path = "../log_wrappers", default-features = false }
+log_wrappers = { workspace = true }
 thiserror = "1.0"
-tikv_alloc = { path = "../tikv_alloc", default-features = false }
+tikv_alloc = { workspace = true }
 
 [dev-dependencies]
-panic_hook = { path = "../panic_hook", default-features = false }
+panic_hook = { workspace = true }
