--- a/components/security/Cargo.toml
+++ b/components/security/Cargo.toml
@@ -8,13 +8,13 @@ publish = false
 tonic = ["dep:tonic"]
 
 [dependencies]
-collections = { path = "../collections", default-features = false }
-encryption = { path = "../encryption", default-features = false }
+collections = { workspace = true }
+encryption = { workspace = true }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-tikv_util = { path = "../tikv_util", default-features = false }
+tikv_util = { workspace = true }
 tonic = { version = "0.5", features = ["tls"], optional = true }
 
 [dev-dependencies]
