--- a/Cargo.toml
+++ b/Cargo.toml
@@ -182,7 +182,7 @@ api_version = { workspace = true, features = ["testexport"] }
 hyper-openssl = "0.9"
 panic_hook = { workspace = true }
 reqwest = { version = "0.11", features = ["blocking"] }
-test_coprocessor_plugin = { workspace = true } # should be a binary dependency
+example_coprocessor_plugin = { workspace = true } # should be a binary dependency
 test_sst_importer = { workspace = true }
 test_util = { workspace = true }
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
@@ -297,72 +297,74 @@ members = [
 default-members = ["cmd/tikv-server", "cmd/tikv-ctl"]
 
 [workspace.dependencies]
-api_version = { path = "components/api_version", default-features = false }
-aws = { path = "components/cloud/aws", default-features = false }
-azure = { path = "components/cloud/azure", default-features = false }
+api_version = { path = "components/api_version" }
+aws = { path = "components/cloud/aws" }
+azure = { path = "components/cloud/azure" }
 backup = { path = "components/backup", default-features = false }
 backup-stream = { path = "components/backup-stream", default-features = false }
-batch-system = { path = "components/batch-system", default-features = false }
-case_macros = { path = "components/case_macros", default-features = false }
-causal_ts = { path = "components/causal_ts", default-features = false }
+batch-system = { path = "components/batch-system" }
+case_macros = { path = "components/case_macros" }
+causal_ts = { path = "components/causal_ts" }
 cdc = { path = "components/cdc", default-features = false }
-cloud = { path = "components/cloud", default-features = false }
-codec = { path = "components/codec", default-features = false }
-collections = { path = "components/collections", default-features = false }
-concurrency_manager = { path = "components/concurrency_manager", default-features = false }
-coprocessor_plugin_api = { path = "components/coprocessor_plugin_api", default-features = false }
-encryption = { path = "components/encryption", default-features = false }
-encryption_export = { path = "components/encryption/export", default-features = false }
-engine_panic = { path = "components/engine_panic", default-features = false }
-engine_rocks = { path = "components/engine_rocks", default-features = false }
-engine_rocks_helper = { path = "components/engine_rocks_helper", default-features = false }
+cloud = { path = "components/cloud" }
+codec = { path = "components/codec" }
+collections = { path = "components/collections" }
+concurrency_manager = { path = "components/concurrency_manager" }
+coprocessor_plugin_api = { path = "components/coprocessor_plugin_api" }
+encryption = { path = "components/encryption" }
+encryption_export = { path = "components/encryption/export" }
+engine_panic = { path = "components/engine_panic" }
+engine_rocks = { path = "components/engine_rocks" }
+engine_rocks_helper = { path = "components/engine_rocks_helper" }
 engine_test = { path = "components/engine_test", default-features = false }
-engine_traits = { path = "components/engine_traits", default-features = false }
+engine_traits = { path = "components/engine_traits" }
 engine_traits_tests = { path = "components/engine_traits_tests", default-features = false }
-error_code = { path = "components/error_code", default-features = false }
-external_storage = { path = "components/external_storage", default-features = false }
-external_storage_export = { path = "components/external_storage/export", default-features = false }
-file_system = { path = "components/file_system", default-features = false }
-gcp = { path = "components/cloud/gcp", default-features = false }
-into_other = { path = "components/into_other", default-features = false }
-keys = { path = "components/keys", default-features = false }
-log_wrappers = { path = "components/log_wrappers", default-features = false }
-memory_trace_macros = { path = "components/memory_trace_macros", default-features = false }
-online_config = { path = "components/online_config", default-features = false }
-panic_hook = { path = "components/panic_hook", default-features = false }
-pd_client = { path = "components/pd_client", default-features = false }
-profiler = { path = "components/profiler", default-features = false }
-raft_log_engine = { path = "components/raft_log_engine", default-features = false }
+error_code = { path = "components/error_code" }
+external_storage = { path = "components/external_storage" }
+external_storage_export = { path = "components/external_storage/export" }
+file_system = { path = "components/file_system" }
+gcp = { path = "components/cloud/gcp" }
+into_other = { path = "components/into_other" }
+keys = { path = "components/keys" }
+log_wrappers = { path = "components/log_wrappers" }
+memory_trace_macros = { path = "components/memory_trace_macros" }
+online_config = { path = "components/online_config" }
+panic_hook = { path = "components/panic_hook" }
+pd_client = { path = "components/pd_client" }
+profiler = { path = "components/profiler" }
+raft_log_engine = { path = "components/raft_log_engine" }
 raftstore = { path = "components/raftstore", default-features = false }
 raftstore_v2 = { path = "components/raftstore-v2", default-features = false }
-resolved_ts = { path = "components/resolved_ts", default-features = false }
-resource_metering = { path = "components/resource_metering", default-features = false }
-security = { path = "components/security", default-features = false }
-server = { path = "components/server", default-features = false }
-snap_recovery = { path = "components/snap_recovery", default-features = false }
-sst_importer = { path = "components/sst_importer", default-features = false }
-test_backup = { path = "components/test_backup", default-features = false }
+resolved_ts = { path = "components/resolved_ts" }
+resource_metering = { path = "components/resource_metering" }
+security = { path = "components/security" }
+server = { path = "components/server" }
+snap_recovery = { path = "components/snap_recovery" }
+sst_importer = { path = "components/sst_importer" }
+test_backup = { path = "components/test_backup" }
 test_coprocessor = { path = "components/test_coprocessor", default-features = false }
-test_coprocessor_plugin = { path = "components/test_coprocessor_plugin/example_plugin", default-features = false }
-test_pd = { path = "components/test_pd", default-features = false }
-test_pd_client = { path = "components/test_pd_client", default-features = false }
+example_coprocessor_plugin = { path = "components/test_coprocessor_plugin/example_plugin" }
+test_pd = { path = "components/test_pd" }
+test_pd_client = { path = "components/test_pd_client" }
 test_raftstore = { path = "components/test_raftstore", default-features = false }
-test_sst_importer = { path = "components/test_sst_importer", default-features = false }
+test_sst_importer = { path = "components/test_sst_importer" }
 test_storage = { path = "components/test_storage", default-features = false }
-test_util = { path = "components/test_util", default-features = false }
-tidb_query_aggr = { path = "components/tidb_query_aggr", default-features = false }
-tidb_query_codegen = { path = "components/tidb_query_codegen", default-features = false }
-tidb_query_common = { path = "components/tidb_query_common", default-features = false }
-tidb_query_datatype = { path = "components/tidb_query_datatype", default-features = false }
-tidb_query_executors = { path = "components/tidb_query_executors", default-features = false }
-tidb_query_expr = { path = "components/tidb_query_expr", default-features = false }
+test_util = { path = "components/test_util" }
+tidb_query_aggr = { path = "components/tidb_query_aggr" }
+tidb_query_codegen = { path = "components/tidb_query_codegen" }
+tidb_query_common = { path = "components/tidb_query_common" }
+tidb_query_datatype = { path = "components/tidb_query_datatype" }
+tidb_query_executors = { path = "components/tidb_query_executors" }
+tidb_query_expr = { path = "components/tidb_query_expr" }
 tikv = { path = ".", default-features = false }
-tikv_alloc = { path = "components/tikv_alloc", default-features = false }
+tikv_alloc = { path = "components/tikv_alloc" }
 tikv_kv = { path = "components/tikv_kv", default-features = false }
-tikv_util = { path = "components/tikv_util", default-features = false }
-tipb_helper = { path = "components/tipb_helper", default-features = false }
-tracker = { path = "components/tracker", default-features = false }
-txn_types = { path = "components/txn_types", default-features = false }
+tikv_util = { path = "components/tikv_util" }
+tipb_helper = { path = "components/tipb_helper" }
+tracker = { path = "components/tracker" }
+txn_types = { path = "components/txn_types" }
+# External libs
+grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 
 [profile.dev.package.grpcio-sys]
 debug = false
