--- a/cmd/tikv-ctl/Cargo.toml
+++ b/cmd/tikv-ctl/Cargo.toml
@@ -59,7 +59,7 @@ error_code = { workspace = true }
 file_system = { workspace = true }
 futures = "0.3"
 gag = "1.0"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 hex = "0.4"
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
