--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -40,7 +40,7 @@ file_system = { workspace = true }
 futures = "0.3"
 futures-io = "0.3"
 
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 hex = "0.4"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.4"
@@ -73,7 +73,7 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 [dev-dependencies]
 async-trait = "0.1"
 engine_panic = { workspace = true }
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 hex = "0.4"
 protobuf = { version = "2.8", features = ["bytes"] }
 rand = "0.8.0"
