--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -49,7 +49,7 @@ external_storage_export = { workspace = true }
 file_system = { workspace = true }
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 hex = "0.4"
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
