--- a/components/error_code/Cargo.toml
+++ b/components/error_code/Cargo.toml
@@ -13,7 +13,7 @@ name = "error_code_gen"
 path = "bin.rs"
 
 [dependencies]
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
