--- a/components/external_storage/export/Cargo.toml
+++ b/components/external_storage/export/Cargo.toml
@@ -64,7 +64,7 @@ futures-executor = { optional = true, version = "0.3" }
 futures-io = { version = "0.3" }
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 gcp = { optional = true, workspace = true }
-grpcio = { version = "0.10", optional = true, default-features = false, features = ["openssl-vendored"] }
+grpcio = { workspace = true, optional = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = { optional = true, version = "1.3" }
 libloading = { optional = true, version = "0.7.0" }
