--- a/components/pd_client/Cargo.toml
+++ b/components/pd_client/Cargo.toml
@@ -12,7 +12,7 @@ collections = { workspace = true }
 error_code = { workspace = true }
 fail = "0.5"
 futures = "0.3"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
