--- a/components/security/Cargo.toml
+++ b/components/security/Cargo.toml
@@ -10,7 +10,7 @@ tonic = ["dep:tonic"]
 [dependencies]
 collections = { workspace = true }
 encryption = { workspace = true }
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
