--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -52,7 +52,7 @@ error_code = { workspace = true }
 file_system = { workspace = true }
 fs2 = "0.4"
 futures = "0.3"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored"] }
+grpcio = { workspace = true }
 grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 hex = "0.4"
 keys = { workspace = true }
