--- a/components/snap_recovery/Cargo.toml
+++ b/components/snap_recovery/Cargo.toml
@@ -12,7 +12,7 @@ encryption_export = { workspace = true }
 engine_rocks = { workspace = true }
 engine_traits = { workspace = true }
 futures = { version = "0.3", features = ["executor"] }
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto" }
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
