--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -22,7 +22,7 @@ file_system = { workspace = true }
 futures = "0.3"
 futures-executor = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 protobuf = "2"
 rand = "0.8"
