--- a/components/test_pd/Cargo.toml
+++ b/components/test_pd/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 collections = { workspace = true }
 fail = "0.5"
 futures = "0.3"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { workspace = true }
 security = { workspace = true }
