--- a/components/test_util/Cargo.toml
+++ b/components/test_util/Cargo.toml
@@ -15,7 +15,7 @@ backtrace = "0.3"
 collections = { workspace = true }
 encryption_export = { workspace = true }
 fail = "0.5"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 rand = "0.8"
 rand_isaac = "0.3"
