--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -81,7 +81,7 @@ error_code = { workspace = true }
 fail = "0.5"
 file_system = { workspace = true }
 futures = "0.3"
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { workspace = true }
 grpcio-health = { version = "0.10", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 libc = "0.2"
