--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -21,31 +21,17 @@ test-engines-panic = [
 ]
 
 [dependencies]
-<<<<<<< HEAD
 api_version = { workspace = true }
 collections = { workspace = true }
+engine_test = { workspace = true }
+engine_traits = { workspace = true }
 futures = "0.3"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { workspace = true }
 raftstore = { workspace = true }
+tempfile = "3.0"
 test_raftstore = { workspace = true }
 tikv = { workspace = true }
 tikv_util = { workspace = true }
 tracker = { workspace = true }
 txn_types = { workspace = true }
-=======
-api_version = { path = "../api_version" }
-collections = { path = "../collections" }
-engine_test = { path = "../engine_test", default-features = false }
-engine_traits = { path = "../engine_traits", default-features = false }
-futures = "0.3"
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
-pd_client = { path = "../pd_client", default-features = false }
-raftstore = { path = "../raftstore", default-features = false }
-tempfile = "3.0"
-test_raftstore = { path = "../test_raftstore", default-features = false }
-tikv = { path = "../../", default-features = false }
-tikv_util = { path = "../tikv_util", default-features = false }
-tracker = { path = "../tracker", default-features = false }
-txn_types = { path = "../txn_types", default-features = false }
->>>>>>> 99ee97858 (*: remove unnecessary db field of GC_Context)
