save point for changing the way of creating peer during split
Signed-off-by: SpadeA-Tang <u6748471@anu.edu.au>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -367,28 +367,28 @@ txn_types = { path = "components/txn_types" }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 
 [profile.dev.package.grpcio-sys]
-debug = false
-opt-level = 1
+opt-level = 0
+debug = true
 
 [profile.dev.package.librocksdb_sys]
-debug = false
-opt-level = 1
+opt-level = 0
+debug = true
 
 [profile.dev.package.libtitan_sys]
-debug = false
-opt-level = 1
+opt-level = 0
+debug = true
 
 [profile.dev.package.tirocks-sys]
-debug = false
-opt-level = 1
+opt-level = 0
+debug = true
 
 [profile.dev.package.tests]
-debug = 1
-opt-level = 1
+opt-level = 0
+debug = true
 
 [profile.dev]
 opt-level = 0
-debug = 0
+debug = true
 codegen-units = 4
 lto = false
 incremental = true
@@ -414,7 +414,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = 0
+debug = true
 codegen-units = 16
 lto = false
 incremental = true
