tests: check memory and cpu usage whethere are many regions
Signed-off-by: cosven <yinshaowen241@gmail.com>

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -148,6 +148,7 @@ test_util = { workspace = true }
 tidb_query_datatype = { workspace = true }
 tipb_helper = { workspace = true }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
+tikv_alloc = { workspace = true }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
 criterion-perf-events = "0.1"
