--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -82,7 +82,7 @@ fail = "0.5"
 file_system = { workspace = true }
 futures = "0.3"
 grpcio = { workspace = true }
-grpcio-health = { version = "0.10", default-features = false }
+grpcio-health = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 libc = "0.2"
 log_wrappers = { workspace = true }
