--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ raft_log_engine = { workspace = true }
 raftstore = { workspace = true, features = ["engine_rocks"] }
 rand = "0.7.3"
 regex = "1.3"
+resource_control = { workspace = true }
 resource_metering = { workspace = true }
 rev_lines = "0.2.1"
 seahash = "4.1.0"
@@ -224,6 +225,9 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # [patch.'https://github.com/pingcap/kvproto']
 # kvproto = { git = "https://github.com/your_github_id/kvproto", branch="your_branch" }
 
+[patch.'https://github.com/tikv/yatp']
+yatp = { git = "https://github.com/glorv/yatp", branch = "priority-schedule" }
+
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
 # Without resolver = 2, using `cargo build --features x` to build `cmd`
@@ -268,6 +272,7 @@ members = [
   "components/raftstore",
   "components/raftstore-v2",
   "components/resolved_ts",
+  "components/resource_control",
   "components/resource_metering",
   "components/security",
   "components/server",
@@ -343,6 +348,7 @@ raft_log_engine = { path = "components/raft_log_engine" }
 raftstore = { path = "components/raftstore", default-features = false }
 raftstore_v2 = { path = "components/raftstore-v2", default-features = false }
 resolved_ts = { path = "components/resolved_ts" }
+resource_control = { path = "components/resource_control" }
 resource_metering = { path = "components/resource_metering" }
 security = { path = "components/security" }
 server = { path = "components/server" }
