--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -32,6 +32,7 @@ cloud-azure = ["raftstore/cloud-azure"]
 batch-system = { workspace = true }
 collections = { workspace = true }
 crossbeam = "0.8"
+engine_rocks = { workspace = true, optional = true } 
 engine_traits = { workspace = true }
 error_code = { workspace = true }
 fail = "0.5"
