--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -38,7 +38,7 @@ fail = "0.5"
 file_system = { workspace = true }
 futures = { version = "0.3", features = ["compat"] }
 keys = { workspace = true }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { workspace = true }
 log_wrappers = { workspace = true }
 pd_client = { workspace = true }
 protobuf = { version = "2.8", features = ["bytes"] }
