--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -69,7 +69,7 @@ raftstore = { workspace = true, features = ["engine_rocks"] }
 rand = "0.8"
 resolved_ts = { workspace = true }
 resource_metering = { workspace = true }
-security = { workspace = true, features = ["tonic"] }
+security = { workspace = true }
 serde_json = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
