ref #13730 introduce priority queue
Signed-off-by: Connor1996 <zbk602423539@gmail.com>

--- a/components/tikv_util/Cargo.toml
+++ b/components/tikv_util/Cargo.toml
@@ -20,6 +20,8 @@ cpu-time = "1.0.0"
 crc32fast = "1.2"
 crossbeam = "0.8"
 derive_more = "0.99.3"
+crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
+parking_lot = "0.12.1"
 error_code = { workspace = true }
 fail = "0.5"
 futures = { version = "0.3", features = ["compat", "thread-pool"] }
