add DataCompacted error
Signed-off-by: husharp <jinhao.hu@pingcap.com>

--- a/etc/error_code.toml
+++ b/etc/error_code.toml
@@ -263,6 +263,11 @@ error = '''
 KV:Pd:GlobalConfigNotFound
 '''
 
+["KV:Pd:DataCompacted"]
+error = '''
+KV:Pd:DataCompacted
+'''
+
 ["KV:Pd:Unknown"]
 error = '''
 KV:Pd:Unknown
