--- a/Cargo.toml
+++ b/Cargo.toml
@@ -223,7 +223,7 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # kvproto at the same time.
 # After the PR to kvproto is merged, remember to comment this out and run `cargo update -p kvproto`.
 [patch.'https://github.com/pingcap/kvproto']
-kvproto = { git = "https://github.com/HuSharp/kvproto", branch = "modify_global_config_item_kind" }
+kvproto = { git = "https://github.com/HuSharp/kvproto", branch = "check_reserved" }
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
